; ModuleID = '/home/carl/AnghaBench/redis/src/extr_scripting.c_evalShaCommand.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_scripting.c_evalShaCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_9__ = type { i32, %struct.TYPE_8__** }
%struct.TYPE_8__ = type { i32 }

@shared = common dso_local global %struct.TYPE_10__ zeroinitializer, align 4
@CLIENT_LUA_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"Please use EVAL instead of EVALSHA for debugging\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @evalShaCommand(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %3 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %3, i32 0, i32 1
  %5 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_8__*, %struct.TYPE_8__** %5, i64 1
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @sdslen(i32 %9)
  %11 = icmp ne i32 %10, 40
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @shared, i32 0, i32 0), align 4
  %15 = call i32 @addReply(%struct.TYPE_9__* %13, i32 %14)
  br label %29

16:                                               ; preds = %1
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load i32, i32* @CLIENT_LUA_DEBUG, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %16
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %25 = call i32 @evalGenericCommand(%struct.TYPE_9__* %24, i32 1)
  br label %29

26:                                               ; preds = %16
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %28 = call i32 @addReplyError(%struct.TYPE_9__* %27, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  br label %29

29:                                               ; preds = %12, %26, %23
  ret void
}

declare dso_local i32 @sdslen(i32) #1

declare dso_local i32 @addReply(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @evalGenericCommand(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @addReplyError(%struct.TYPE_9__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
